creditas-sf/force-app/main/default/objects/ProfessionalInfo__c/ProfessionalInfo__c.object-meta.xml
<CustomObject>
    <label>Emprego</label>
    <nameField>
        <displayFormat>ProfInfo-{00000000}</displayFormat>
        <label>ProfessionalInfo Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ProfessionalInfos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>