creditas-sf/force-app/main/default/objects/ProfessionalInfo__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Empregos</relationshipLabel>
    <relationshipName>ProfessionalInfos</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>