creditas-sf/force-app/main/default/objects/ProfessionalInfo__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LAWYER</fullName>
            </value>
            <value>
                <fullName>ADMINISTRATIVE</fullName>
            </value>
            <value>
                <fullName>ANALYST</fullName>
            </value>
            <value>
                <fullName>ARCHITECT</fullName>
            </value>
            <value>
                <fullName>ARTIST</fullName>
            </value>
            <value>
                <fullName>ADVISER</fullName>
            </value>
            <value>
                <fullName>MERCHANT</fullName>
            </value>
            <value>
                <fullName>INDUSTRIAL_MERCHANT</fullName>
            </value>
            <value>
                <fullName>ACCOUNTANT</fullName>
            </value>
            <value>
                <fullName>DIRECTOR</fullName>
            </value>
            <value>
                <fullName>DOCTOR</fullName>
            </value>
            <value>
                <fullName>EMPLOYEE</fullName>
            </value>
            <value>
                <fullName>ENTREPRENEUR</fullName>
            </value>
            <value>
                <fullName>NURSE</fullName>
            </value>
            <value>
                <fullName>STUDENT</fullName>
            </value>
            <value>
                <fullName>MANAGER</fullName>
            </value>
            <value>
                <fullName>HOUSEWIFE</fullName>
            </value>
            <value>
                <fullName>ENGINEER</fullName>
            </value>
            <value>
                <fullName>RETIRED</fullName>
            </value>
            <value>
                <fullName>MILITARY</fullName>
            </value>
            <value>
                <fullName>PENSIONED</fullName>
            </value>
            <value>
                <fullName>POLITIC</fullName>
            </value>
            <value>
                <fullName>PROFESSOR</fullName>
            </value>
            <value>
                <fullName>PSYCHOLOGIST</fullName>
            </value>
            <value>
                <fullName>PUBLIC_RELATIONIST</fullName>
            </value>
            <value>
                <fullName>CARRIER</fullName>
            </value>
            <value>
                <fullName>SELLER</fullName>
            </value>
            <value>
                <fullName>SERVANT</fullName>
            </value>
            <value>
                <fullName>MARKETER</fullName>
            </value>
            <value>
                <fullName>CABBY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>