creditas-sf/force-app/main/default/objects/ProfessionalInfo__c/fields/Current__c.field-meta.xml
<CustomField>
    <fullName>Current__c</fullName>
    <label>Current</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>