creditas-sf/force-app/main/default/objects/ProfessionalInfo__c/fields/EconomicActivity__c.field-meta.xml
<CustomField>
    <fullName>EconomicActivity__c</fullName>
    <label>EconomicActivity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AGRICULTURE</fullName>
            </value>
            <value>
                <fullName>MINING</fullName>
            </value>
            <value>
                <fullName>OIL</fullName>
            </value>
            <value>
                <fullName>FOOD_MANUFACTURING</fullName>
            </value>
            <value>
                <fullName>CATTLE_RAISING</fullName>
            </value>
            <value>
                <fullName>TEXTILE</fullName>
            </value>
            <value>
                <fullName>WOOD</fullName>
            </value>
            <value>
                <fullName>PAPER</fullName>
            </value>
            <value>
                <fullName>EDITORIAL</fullName>
            </value>
            <value>
                <fullName>CHEMISTRY</fullName>
            </value>
            <value>
                <fullName>FOREST</fullName>
            </value>
            <value>
                <fullName>PETROCHEMICALS</fullName>
            </value>
            <value>
                <fullName>NON_METALLIC_MINERALS</fullName>
            </value>
            <value>
                <fullName>METALLURGY</fullName>
            </value>
            <value>
                <fullName>MACHINERY</fullName>
            </value>
            <value>
                <fullName>MANUFACTURE</fullName>
            </value>
            <value>
                <fullName>FINISHING</fullName>
            </value>
            <value>
                <fullName>CONSTRUCTION</fullName>
            </value>
            <value>
                <fullName>ELECTRIC_POWER</fullName>
            </value>
            <value>
                <fullName>PREPARED_FOOD</fullName>
            </value>
            <value>
                <fullName>CLOTHES</fullName>
            </value>
            <value>
                <fullName>STORES</fullName>
            </value>
            <value>
                <fullName>COMMERCE</fullName>
            </value>
            <value>
                <fullName>VEHICLES</fullName>
            </value>
            <value>
                <fullName>FIREARMS</fullName>
            </value>
            <value>
                <fullName>FINANCIAL_SERVICES</fullName>
            </value>
            <value>
                <fullName>REAL_STATE</fullName>
            </value>
            <value>
                <fullName>RAFFLES_SEEPSTAKES</fullName>
            </value>
            <value>
                <fullName>GROUND_TRANSPORTATION</fullName>
            </value>
            <value>
                <fullName>AIR_TRANSPORTATION</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>