creditas-sf/force-app/main/default/objects/ProfessionalInfo__c/fields/ExternalAccountId__c.field-meta.xml
<CustomField>
    <fullName>ExternalAccountId__c</fullName>
    <label>ExternalAccountId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>