creditas-sf/force-app/main/default/objects/ProfessionalInfo__c/fields/JobTitle__c.field-meta.xml
<CustomField>
    <fullName>JobTitle__c</fullName>
    <label>JobTitle</label>
    <length>100</length>
    <type>Text</type>
</CustomField>