creditas-sf/force-app/main/default/objects/ProfessionalInfo__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>