creditas-sf/force-app/main/default/objects/ProfessionalInfo__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CLT</fullName>
            </value>
            <value>
                <fullName>FREELANCER</fullName>
            </value>
            <value>
                <fullName>CIVIL_SERVANT</fullName>
            </value>
            <value>
                <fullName>RETIRED</fullName>
            </value>
            <value>
                <fullName>BUSINESSMAN</fullName>
            </value>
            <value>
                <fullName>SELF_EMPLOYED</fullName>
            </value>
            <value>
                <fullName>OTHER</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>